--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
             <h3>Judgment</h3>
             <p><strong>Нуарний детективний трилер</strong> у Камуро-чьо з юридичними розслідуваннями. Підтримуємо інтерфейс, субтитри, туторіали.</p>
             <div class="progress" title="Готовність 73%"><span style="width:73%"></span></div>
-            <small style="color:var(--muted)">Готовність українізатора: <strong>73%</strong></small>
+            <small style="color:var(--muted)">Готовність: <strong>73%</strong></small>
             <div class="cta"><a class="btn disabled" href="#" aria-disabled="true" tabindex="-1">Завантажити</a></div>
           </div>
         </article>
@@ -190,8 +190,8 @@
           <div class="content">
             <h3>Yakuza Kiwami 2</h3>
             <p>Камуро-чьо та Сотенборі, драма клану Тоджьо, божевільні сабсторі. Адаптуємо ідіоми та гумор серії.</p>
-            <div class="progress" title="Готовність 30%"><span style="width:30%"></span></div>
-            <small style="color:var(--muted)">Готовність: <strong>≈30%</strong></small>
+            <div class="progress" title="Готовність 44%"><span style="width:44%"></span></div>
+            <small style="color:var(--muted)">Готовність: <strong>44%</strong></small>
             <div class="cta"><a class="btn disabled" href="#" aria-disabled="true" tabindex="-1">Завантажити</a></div>
           </div>
         </article>
@@ -205,8 +205,8 @@
           <div class="content">
             <h3>Yakuza 3 Remastered</h3>
             <p>«Ранкова зірка», вибір, дорослішання. Перекладаємо емоційні сцени з повагою до характерів.</p>
-            <div class="progress" title="Готовність 30%"><span style="width:30%"></span></div>
-            <small style="color:var(--muted)">Готовність: <strong>≈30%</strong></small>
+            <div class="progress" title="Готовність 10%"><span style="width:10%"></span></div>
+            <small style="color:var(--muted)">Готовність: <strong>10%</strong></small>
             <div class="cta"><a class="btn disabled" href="#" aria-disabled="true" tabindex="-1">Завантажити</a></div>
           </div>
         </article>
@@ -250,8 +250,8 @@
           <div class="content">
             <h3>Travis Strikes Again: No More Heroes</h3>
             <p>Експериментальний спін-оф із метафікційними рівнями й мініжанрами.</p>
-            <div class="progress" title="Статус у роботі"><span style="width:45%"></span></div>
-            <small style="color:var(--muted)">Статус: <strong>у роботі</strong></small>
+            <div class="progress" title="Прогрес 12%"><span style="width:12%"></span></div>
+            <small style="color:var(--muted)">Прогрес: <strong>12%</strong></small>
             <div class="cta"><a class="btn disabled" href="#" aria-disabled="true" tabindex="-1">Завантажити</a></div>
           </div>
         </article>
@@ -262,6 +262,7 @@
             <img src="assets/no_more_heroes_3.jpg" alt="No More Heroes 3">
             <span class="badge">У процесі локалізації</span>
           </div>
+        
           <div class="content">
             <h3>No More Heroes 3</h3>
             <p>Космічні лиходії, ультра-стиль та саунд. Підтримуємо UI, діалоги й сабсторі серії.</p>
