--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Українська локалізація від «Little Bit»</title>
   <link rel="icon" type="image/x-icon" href="logo.ico">
-  <meta name="description" content="Спілка Little Bit — українські локалізації відеоігор: Judgment, Yakuza, No More Heroes." />
+  <meta name="description" content="«Little Bit» — українські локалізації відеоігор: Judgment, Yakuza, No More Heroes." />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;800&display=swap" rel="stylesheet">
@@ -178,7 +178,7 @@
             <h3>Judgment</h3>
             <p><strong>Нуарний детективний трилер</strong> у Камуро-чьо з юридичними розслідуваннями. Підтримуємо інтерфейс, субтитри, туторіали.</p>
             <div class="progress" title="Готовність 73%"><span style="width:73%"></span></div>
-            <small style="color:var(--muted)">Готовність українізатора: <strong>73%</strong></small>
+            <small style="color:var(--muted)">Готовність: <strong>73%</strong></small>
             <div class="cta"><a class="btn disabled" href="#" aria-disabled="true" tabindex="-1">Завантажити</a></div>
           </div>
         </article>
