--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
           </div>
           <div class="content">
             <h3>Judgment</h3>
-            <p><strong>Нуарний детективний трилер</strong> у Камуро-чьо з юридичними розслідуваннями. Підтримуємо інтерфейс, субтитри, туторіали.</p>
+            <p><strong>Неонуарний детективний бойовик від авторів Yakuza.</strong> Повний український переклад: підісторії (побічні завдання), туторіали, інтерфейс та інше.</p>
             <div class="progress" title="Готовність 73%"><span style="width:73%"></span></div>
             <small style="color:var(--muted)">Готовність: <strong>73%</strong></small>
             <div class="cta"><a class="btn disabled" href="#" aria-disabled="true" tabindex="-1">Завантажити</a></div>
@@ -191,7 +191,7 @@
           </div>
           <div class="content">
             <h3>Yakuza Kiwami 2</h3>
-            <p>Камуро-чьо та Сотенборі, драма клану Тоджьо, божевільні сабсторі. Адаптуємо ідіоми та гумор серії.</p>
+            <p><strong>Культовий ремейк на оновленному рушії.</strong> Повний український переклад: підісторії (побічні завдання), туторіали, інтерфейс та інше.</p>
             <div class="progress" title="Готовність 44%"><span style="width:44%"></span></div>
             <small style="color:var(--muted)">Готовність: <strong>44%</strong></small>
             <div class="cta"><a class="btn disabled" href="#" aria-disabled="true" tabindex="-1">Завантажити</a></div>
@@ -206,7 +206,7 @@
           </div>
           <div class="content">
             <h3>Yakuza 3 Remastered</h3>
-            <p>«Ранкова зірка», вибір, дорослішання. Перекладаємо емоційні сцени з повагою до характерів.</p>
+            <p><strong>Той самий пляжний епізод.</strong> Повний український переклад: підісторії (побічні завдання), туторіали, інтерфейс та інше.</p>
             <div class="progress" title="Готовність 10%"><span style="width:10%"></span></div>
             <small style="color:var(--muted)">Готовність: <strong>10%</strong></small>
             <div class="cta"><a class="btn disabled" href="#" aria-disabled="true" tabindex="-1">Завантажити</a></div>
@@ -221,7 +221,7 @@
           </div>
           <div class="content">
             <h3>No More Heroes</h3>
-            <p>Санта-Дестрой, променева катана і фірмовий гумор. Передаємо стиль і UI.</p>
+            <p><strong>Перша та неповторна пригода Тревіса Тачдауна.</strong> Повний український переклад: Сюжет, туторіали, інтерфейс та інше.</p>
             <div class="progress" title="Прогрес 80%"><span style="width:80%"></span></div>
             <small style="color:var(--muted)">Прогрес: <strong>80%</strong></small>
             <div class="cta"><a class="btn disabled" href="#" aria-disabled="true" tabindex="-1">Завантажити</a></div>
@@ -236,7 +236,7 @@
           </div>
           <div class="content">
             <h3>No More Heroes 2: Desperate Struggle</h3>
-            <p>Брутальна помста, ще більше панчу та стилю. Окремі інтерфейси, жарти та бойові репліки.</p>
+            <p><strong>Ще більше стилю та боїв!</strong> Повний український переклад: Сюжет, туторіали, інтерфейс та інше.</p>
             <div class="progress" title="Прогрес 100%"><span style="width:100%"></span></div>
             <small style="color:var(--muted)">Прогрес: <strong>100%</strong></small>
             <div class="cta"><a class="btn disabled" href="#" aria-disabled="true" tabindex="-1">Завантажити</a></div>
@@ -251,7 +251,7 @@
           </div>
           <div class="content">
             <h3>Travis Strikes Again: No More Heroes</h3>
-            <p>Експериментальний спін-оф із метафікційними рівнями й мініжанрами.</p>
+             <p><strong>Експериментальний спін-оф із метафікційними рівнями й мініжанрами.</strong> Повний український переклад: Сюжет, туторіали, інтерфейс та інше.</p>
             <div class="progress" title="Прогрес 12%"><span style="width:12%"></span></div>
             <small style="color:var(--muted)">Прогрес: <strong>12%</strong></small>
             <div class="cta"><a class="btn disabled" href="#" aria-disabled="true" tabindex="-1">Завантажити</a></div>
@@ -267,7 +267,7 @@
         
           <div class="content">
             <h3>No More Heroes 3</h3>
-            <p>Космічні лиходії, ультра-стиль та саунд. Підтримуємо UI, діалоги й сабсторі серії.</p>
+            <p><strong>Надери дупу прибульцям!</strong> Повний український переклад: Сюжет, туторіали, інтерфейс та інше.</p>
             <div class="progress" title="Прогрес 70%"><span style="width:70%"></span></div>
             <small style="color:var(--muted)">Прогрес: <strong>70%</strong></small>
             <div class="cta"><a class="btn disabled" href="#" aria-disabled="true" tabindex="-1">Завантажити</a></div>
