--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     .pill{display:inline-flex; gap:8px; align-items:center; padding:6px 10px; border-radius:999px; background:rgba(125,211,252,.12); border:1px solid rgba(125,211,252,.35); color:#dbeafe; font-weight:600; font-size:12px}
     .lead{color:var(--muted); font-size: 16px; line-height:1.7}
 
-    .cta{display:flex; gap:12px; margin-top:12px; flex-wrap:wrap}
+    .cta{display:flex; gap:12px; margin-top:10px; flex-wrap:wrap}
     .btn{padding:10px 14px; border-radius:12px; border:1px solid rgba(255,255,255,0.12); color:var(--text); text-decoration:none; display:inline-flex; gap:10px; align-items:center; transition:transform .2s, background .2s, border-color .2s}
     .btn.primary{background:linear-gradient(135deg, rgba(125,211,252,.25), rgba(167,139,250,.25)); border-color: rgba(167,139,250,.45)}
     .btn:hover{transform:translateY(-1px); border-color:rgba(255,255,255,0.35)}
@@ -86,13 +86,26 @@
     h2{font-size: clamp(22px, 3vw, 32px); margin:0 0 18px}
 
     /* Grid */
-    .grid{ display:grid; grid-template-columns: repeat(auto-fill, minmax(260px, 1fr)); gap:14px }
+    .grid{
+      display:grid;
+      grid-template-columns: repeat(auto-fill, minmax(260px, 1fr));
+      gap:14px;
+      align-items:stretch;
+    }
     .card{ overflow:hidden; position:relative; display:flex; flex-direction:column }
     .thumb{ position:relative; aspect-ratio: 16/9; background:#0f172a; overflow:hidden }
     .thumb img{ width:100%; height:100%; object-fit:cover; opacity:.92; transform: scale(1.02); transition:transform .5s ease }
     .card:hover .thumb img{ transform: scale(1.07) }
     .badge{position:absolute; top:12px; left:12px; background:rgba(2,6,23,.55); border:1px solid rgba(255,255,255,.25); border-radius:999px; padding:6px 10px; font-size:12px; font-weight:700}
-    .content{ padding:14px 14px 16px; display:flex; flex-direction:column; gap:8px }
+
+    /* Контент картки: однакові низи */
+    .content{
+      padding:14px 14px 16px;
+      display:grid;
+      grid-template-rows: auto 1fr auto auto auto; /* заголовок | опис | прогрес | підпис | кнопка */
+      gap:8px;
+      flex:1;
+    }
     .content h3{margin:0; font-size:18px}
     .content p{margin:0; color:var(--muted); line-height:1.6; font-size:14px}
 
@@ -121,7 +134,7 @@
       height:auto; width:auto;
       object-fit:contain;
       filter: drop-shadow(0 10px 18px rgba(0,0,0,.55)) drop-shadow(0 0 1px rgba(255,255,255,.12));
-      pointer-events:none; /* click passes through */
+      pointer-events:none;
       user-select:none;
     }
     @media (max-width: 360px){
@@ -205,6 +218,24 @@
             <div class="progress" title="Готовність 73%"><span style="width:73%"></span></div>
             <small style="color:var(--muted)">Готовність: <strong>73%</strong></small>
             <div class="cta"><a class="btn disabled" href="#" aria-disabled="true" tabindex="-1">Завантажити</a></div>
+          </div>
+        </article>
+
+        <!-- Lost Judgment (NEW) -->
+        <article class="card glass">
+          <div class="thumb">
+            <img src="assets/lost_judgment.jpg" alt="Такаюкі Яґамі (Lost Judgment)">
+            <img class="logo" src="assets/lost_judgment_logo.png" alt="Логотип Lost Judgment">
+            <span class="badge">Збір на локалізацію</span>
+          </div>
+          <div class="content">
+            <h3>Lost Judgment</h3>
+            <p><strong>Продовження неонуарної історії про детектива Яґамі.</strong> Йде добровільний збір на локалізацію гри.</p>
+            <div class="progress" title="Прогрес 0%"><span style="width:0%"></span></div>
+            <small style="color:var(--muted)">Статус: <strong>збір коштів</strong></small>
+            <div class="cta">
+              <a class="btn primary" href="https://donatello.to/LittleBitUA" target="_blank" rel="noopener">Спонсорувати</a>
+            </div>
           </div>
         </article>
 
@@ -295,7 +326,6 @@
             <img class="logo" src="assets/no_more_heroes3_logo.png" alt="Логотип No More Heroes 3">
             <span class="badge">У процесі локалізації</span>
           </div>
-        
           <div class="content">
             <h3>No More Heroes 3</h3>
             <p><strong>Надери дупу прибульцям!</strong> Повний український переклад: Сюжет, туторіали, інтерфейс та інше.</p>
