--- a/index.html
+++ b/index.html
@@ -193,9 +193,9 @@
         <div class="glass" style="padding:16px">
           <h2 style="margin:6px 0 10px">Що ми робимо</h2>
           <ul style="margin:0; padding-left:18px; line-height:1.8; color:var(--muted)">
-            <li>Повні текстові локалізації (UI, субтитри, туторіали, внутрішньоігрові матеріали)</li>
-            <li>Підтримка шрифтів та технічна інтеграція</li>
-            <li>Художня адаптація з дотриманням українського правопису</li>
+            <li>Повна текстова локалізація (інтерфейс, субтитри, навчальні матеріали/туторіали, внутрішньоігрові тексти)</li>
+            <li>Підтримка та інтеграція шрифтів, технічний супровід</li>
+            <li>Художня адаптація з дотриманням чинного українського правопису</li>
           </ul>
         </div>
       </div>
