--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
         <div>
           <span class="pill">Українські локалізації ↗</span>
           <h1>Спілка «Little Bit» — робимо ігри українськими з любов’ю до мови</h1>
-          <p class="lead">Ми займаємося повними перекладами ігор українською: діалоги, інтерфейси, шрифти, адаптація гумору та стилю.</p>
+          <p class="lead">Улюблені історії — українською, від серця.</p>
         </div>
         <div class="glass" style="padding:16px">
           <h2 style="margin:6px 0 10px">Що ми робимо</h2>
