--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
       <div class="hero glass">
         <div>
           <span class="pill">Українські локалізації ↗</span>
-          <h1>Спілка «Little Bit» — робимо ігри українськими з любов’ю до мови</h1>
+          <h1>Спілка «Little Bit» — Грайте українською — відчувайте по-новому.</h1>
           <p class="lead">Улюблені історії — українською, від серця.</p>
         </div>
         <div class="glass" style="padding:16px">
