--- a/index.html
+++ b/index.html
@@ -186,8 +186,8 @@
     <section id="home" class="container">
       <div class="hero glass">
         <div>
-          <span class="pill">Українські локалізації ↗</span>
-          <h1>«Little Bit» — Грайте українською — відчувайте по-новому.</h1>
+          <h1>«Little Bit»</h1>
+          <h1>Грайте українською — відчувайте по-новому.</h1>
           <p class="lead">Улюблені історії — українською, від серця.</p>
         </div>
         <div class="glass" style="padding:16px">
