--- a/index.html
+++ b/index.html
@@ -52,8 +52,16 @@
     .nav a:hover{color:var(--text); background:rgba(255,255,255,0.06)}
 
     /* Burger */
-    .burger{display:none; background:transparent; border:1px solid rgba(255,255,255,.15); border-radius:10px; padding:8px; color:var(--text)}
+    .burger{
+      display:none; background:transparent; border:1px solid rgba(255,255,255,.15);
+      border-radius:10px; padding:8px; color:var(--text);
+      align-items:center; justify-content:center;
+    }
     .burger svg{width:22px; height:22px; display:block}
+    /* показуємо | | | за замовчуванням, X — коли відкрито меню */
+    .burger .icon-x{display:none}
+    .burger.active .icon-bars{display:none}
+    .burger.active .icon-x{display:block}
 
     /* Drawer */
     .drawer{position:fixed; inset:0 0 0 auto; width:78%; max-width:320px; transform:translateX(100%); transition:transform .25s ease;
@@ -175,8 +183,16 @@
         <a href="#contacts">Контакти</a>
         <a href="#support">Фінансова підтримка</a>
       </div>
+      <!-- ТА САМА КНОПКА-БУРГЕР, тепер з двома іконками -->
       <button id="openDrawer" class="burger" aria-label="Відкрити меню" aria-controls="drawer" aria-expanded="false">
-        <svg viewBox="0 0 24 24" fill="currentColor"><path d="M4 6h16M4 12h16M4 18h16"/></svg>
+        <!-- | | | -->
+        <svg class="icon-bars" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true">
+          <path d="M4 6h16M4 12h16M4 18h16"/>
+        </svg>
+        <!-- X -->
+        <svg class="icon-x" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true">
+          <path d="M6 18L18 6M6 6l12 12"/>
+        </svg>
       </button>
     </nav>
   </header>
@@ -367,9 +383,31 @@
     const backdrop = document.getElementById('backdrop');
     const openBtn = document.getElementById('openDrawer');
     const closeBtn = document.getElementById('closeDrawer');
-    function open(){ drawer.classList.add('open'); backdrop.classList.add('show'); openBtn.setAttribute('aria-expanded','true'); drawer.setAttribute('aria-hidden','false'); backdrop.setAttribute('aria-hidden','false'); }
-    function close(){ drawer.classList.remove('open'); backdrop.classList.remove('show'); openBtn.setAttribute('aria-expanded','false'); drawer.setAttribute('aria-hidden','true'); backdrop.setAttribute('aria-hidden','true'); }
-    openBtn?.addEventListener('click', open);
+
+    function open(){
+      drawer.classList.add('open');
+      backdrop.classList.add('show');
+      openBtn.classList.add('active');
+      openBtn.setAttribute('aria-expanded','true');
+      openBtn.setAttribute('aria-label','Закрити меню');
+      drawer.setAttribute('aria-hidden','false');
+      backdrop.setAttribute('aria-hidden','false');
+    }
+    function close(){
+      drawer.classList.remove('open');
+      backdrop.classList.remove('show');
+      openBtn.classList.remove('active');
+      openBtn.setAttribute('aria-expanded','false');
+      openBtn.setAttribute('aria-label','Відкрити меню');
+      drawer.setAttribute('aria-hidden','true');
+      backdrop.setAttribute('aria-hidden','true');
+    }
+
+    // Перемикач у тій самій кнопці: | | | ↔ X
+    openBtn?.addEventListener('click', () => {
+      if (drawer.classList.contains('open')) { close(); } else { open(); }
+    });
+
     closeBtn?.addEventListener('click', close);
     backdrop?.addEventListener('click', close);
     window.addEventListener('keydown', (e)=>{ if(e.key==='Escape') close(); });
